data/all_generated_tests/raw_wast_tests/block_ImproperFunctionCallorReturnHandling_2554.wast
;; 5. **Block Ending with Call and Branch**: Ensure correct context management when ending a block with a function call followed by a branching operation.    ```    block $block6      call $func4      br $label2    end    ```

(assert_invalid
  (module
    (func $func4)
    (func (block (call $func4) (br 2)))
  )
  "label index out of range"
)